<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/Theme.NoteActivity.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width = "match_parent"
            android:background="?attr/colorPrimary"
              app:popupTheme="@style/Theme.NoteActivity.PopupOverlay"
            android:layout_height = "?attr/actionBarSize" />

  </com.google.android.material.appbar.AppBarLayout>

  <include layout="@layout/content_note_list"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
  android:id="@+id/fab"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_gravity="bottom|end"
  android:layout_marginEnd="@dimen/fab_margin"
  android:layout_marginBottom="16dp"
  app:srcCompat="@android:drawable/ic_dialog_email" />

  </androidx.coordinatorlayout.widget.CoordinatorLayout>